istio-config/worker-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spark-worker
spec:
  hosts:
  - test-worker.spark.svc.cluster.local
  http:
  - route:
    - destination:
        host: test-worker.spark.svc.cluster.local
        subset: v1
    # fault:
    #   abort:
    #     percentage:
    #       value: 0.1
    #     httpStatus: 400
---
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: worker-sidecar
  namespace: spark
spec:
  workloadSelector:
    labels:
      name: spark-worker
  egress:
  - hosts:
    - "./*"
    - "istio-system/*"
